--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ idna==2.10
 inflection==0.5.1
 more-itertools==8.5.0
 multidict==4.7.6
+multitasking==0.0.9
 numpy==1.19.1
 pandas==1.1.1
 python-dateutil==2.8.1
@@ -18,3 +19,4 @@ six==1.15.0
 urllib3==1.25.10
 websockets==8.1
 yarl==1.4.2
+yfinance==0.1.54
