--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ async-timeout==3.0.1
 attrs==19.3.0
 certifi==2020.6.20
 chardet==3.0.4
+colorzero==1.1
 discord.py==1.4.1
+gpiozero==1.5.1
 idna==2.10
 inflection==0.5.1
 more-itertools==8.5.0
